--- a/style.css
+++ b/style.css
@@ -1,6 +1,48 @@
 *{
     box-sizing: border-box;
-    background-color: fuchsia;
     margin: 0;
     padding: 0;
+    font-family: monospace;
+}
+
+body{
+    height:100vh;
+    display:grid;
+    grid-template-rows: 75px 1fr 25px;
+    background-color: linen;
+}
+
+main{
+    overflow-y: auto;
+    padding: 8px;
+}
+
+header{
+    background-color: purple;
+    color:white;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
+}
+
+h1{
+    margin-right: 20px;
+}
+
+a{
+    color: white;
+    text-decoration: none;
+}
+
+a:hover{
+    color: yellow;
+}
+
+
+
+footer{
+    background: purple;
+    color:white;
+    padding: 5px;
 }
